generator client {
  provider = "prisma-client-js"
  //turning off referential integrity for now 3/24/2023
  // previewFeatures = ["referentialIntegrity"]
}

datasource db {
  provider     = "mysql"
  url          = env("DATABASE_URL")
  relationMode = "prisma"
}

//To generate the dbml file, run: npx prisma generate
//Visualize the file at: https://dbdiagram.io
generator dbml {
  provider = "prisma-dbml-generator"
}

model User {
  id                    String                 @id @default(cuid())
  username              String?                
  email                 String?                @unique
  emailVerified         DateTime?
  password              String
  image                 String?
  role                  String?
  address               String?
  city                  String?
  postalCode            String?
  stripeUserId         String?    
  createdAt             DateTime               @default(now())
  updatedAt             DateTime               @updatedAt
  potentialCareSessions PotentialCareSession[]
  sessions              Session[]
  careSessions          CareSession[]
  messages              Message[] //added to support messages down below - part of pusher test
}

model CareSession {
  id                    String                 @id @default(cuid())
  sessionId             String                 @unique @default(cuid())
  user                  User                   @relation(fields: [userId], references: [id])
  userId                String // relation scalar field  (used in the `@relation` attribute above)
  name                  String?
  title                 String?
  address               String?
  medicalNotes          String?
  overview              String?
  sessionType           String?
  hourlyRate            Int?
  totalHours            Int?
  totalCompensation     Int?
  slug                  String
  acceptedCaregiverId   String?
  careSessionStatus     String?
  sessionDay            Int?
  sessionMonth          Int?
  sessionYear           Int?
  sessionStartHour      Int?
  sessionStartMinute    Int?
  sessionEndHour        Int?
  sessionEndMinute      Int?
  city                  String?
  postalCode            String?
  location              String?
  createdAt             DateTime               @default(now())
  potentialCareSessions PotentialCareSession[]

  @@unique([slug])
  @@index([userId])
}

model Session {
  id           String   @id @default(cuid())
  sessionToken String   @unique
  userId       String
  expires      DateTime
  user         User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
}

model PotentialCareSession {
  id            String      @id @default(cuid())
  caregiver     User        @relation(fields: [caregiverId], references: [id])
  caregiverId   String // relation scalar field  (used in the `@relation` attribute above)
  careSession   CareSession @relation(fields: [careSessionId], references: [id])
  careSessionId String // relation scalar field  (used in the `@relation` attribute above)
  status        String
  appliedAt     DateTime    @default(now())
  slug          String

  @@unique([slug])
  @@index([caregiverId])
  @@index([careSessionId])
}

model Message {
  id          String   @id @default(cuid())
  sender      User?    @relation(fields: [senderId], references: [id])
  senderId    String
  content     String @db.Text
  channelName String
  createdAt   DateTime @default(now())

  @@index([senderId])
}

model PusherChannel {
  id          String   @id @default(cuid())
  createdAt   DateTime @default(now())
  channelName String
  caregiverId String
  patientId   String
}
